--- a/heading.html
+++ b/heading.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
    
-    <title>Title</title>
+    <title>Heading title</title>
     </head>
     <body>
 <h1>Heading styles</h1>
